# TicketAgentHackathon

./: Dockerfile  README.md  environment.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
TicketAgentEnv/: README.md  baseline.py  environment.py  main.py  models.py  requirements.txt
server/: app.py
